[package]
name = "calendar"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = { version = "0.29.0", features = ["widget-calendar"] }
time = { version = "0.3.39", features = ["local-offset"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
incremental = true
split-debuginfo = "packed"
strip = "symbols"

[profile.dev]
opt-level = 0
